--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "express": "^4.21.2",
     "mongoose": "^8.10.1",
     "node": "^18.20.7",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "dotenv": "^16.0.3"
   },
+
   "name": "mod6",
   "version": "1.0.0",
   "description": "",
