--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "express": "^4.21.2",
     "mongoose": "^8.10.1",
     "node": "^18.20.7",
-    "nodemon": "^3.1.9",
-    "dotenv": "^16.0.3"
+    "nodemon": "^3.1.9"
   },
 
   "name": "mod6",
